<resources>
    <string name="app_name" translatable="false">substratum</string>
    <string name="interfacer_name" translatable="false">interfacer</string>
    <string name="legacy_app_name" translatable="false">substratum legacy</string>
    <string name="debug_app_name" translatable="false">debugger</string>
    <string name="showcase">showcase</string>
    <string name="helper_name">substratum overlay helper</string>
    <string name="drawer_name" translatable="false">projekt substratum</string>
    <string name="restore_app_name">restore theme</string>
    <string name="android">android version:</string>
    <string name="device">device model:</string>
    <string name="search_play_store_url" translatable="false">https://play.google.com/store/search?q=Substratum%20Theme&amp;c=apps</string>
    <string name="search_play_store_url_icon_packs" translatable="false">https://play.google.com/store/search?q=Icon%20Pack&amp;c=apps</string>
    <string name="search_play_store_url_legacy" translatable="false">https://play.google.com/store/search?q=Substratum%20Legacy%20Theme&amp;c=apps</string>
    <string name="supported_roms_url" translatable="false">https://raw.githubusercontent.com/substratum/database/master/supported_roms.xml</string>
    <string name="tbo_theme_ready_url" translatable="false">http://forum.xda-developers.com/android/apps-games/apps-themeable-hangouts-layers-cmte-t3113192</string>
    <string name="substratum_github" translatable="false">https://github.com/substratum/substratum</string>
    <string name="substratum_github_commits" translatable="false">https://github.com/substratum/substratum/commits/dev</string>
    <string name="interfacer_github" translatable="false">https://github.com/substratum/interfacer</string>
    <string name="interfacer_github_commits" translatable="false">https://github.com/substratum/interfacer/commits/n-rootless</string>
    <string name="showcase_tabs" translatable="false">https://raw.githubusercontent.com/substratum/substratum/dev/showcase.xml</string>
    <string name="crowdin_url" translatable="false">"http://translate.projektsubstratum.com/"</string>
    <string name="validator_url" translatable="false">"https://raw.githubusercontent.com/substratum/database/master/commit_tracker.xml"</string>
    <string name="validator_whitelist_url" translatable="false">"https://raw.githubusercontent.com/substratum/database/master/commit_whitelist.xml"</string>
    <string name="themer_email" translatable="false">substratumthemers@gmail.com</string>
    <string name="resource_checker_request">Send commit merge request using&#8230;</string>
    <string name="resource_checker">Commit Validator</string>
    <string name="resource_checker_commons">Framework</string>
    <string name="resource_checker_dialog_quit">Exit</string>
    <string name="resource_not_validated">New commits have been merged!</string>
    <string name="resource_needs_internet">To validate your ROM\'s commits, please connect to the internet!</string>
    <string name="resource_validated">All commits intact!</string>
    <string name="resource_boolean" translatable="false">bool</string>
    <string name="resource_color" translatable="false">color</string>
    <string name="resource_dimension" translatable="false">dimens</string>
    <string name="resource_style" translatable="false">style</string>
    <string name="resource_commit_dialog_title">Missing Resources in %s</string>
    <string name="resource_commit_dialog_subject" translatable="false">Commit Merge Request</string>
    <string name="resource_commit_dialog_body" formatted="false" translatable="false">
        Themers,\n\nI have an unmerged commit on this ROM, and would
        like to see if you could help the ROM developers resolve this issue, thanks!
        \n\nDevice:%s\n\nReport:\n\n%s\n\nBuildProp:\n\n%s
    </string>
    <string name="showcase_no_connection">the theme showcase requires an internet connection to
        function!
    </string>
    <string name="showcase_no_themes">seems like there was an error caching the showcase database
        for this tab&#8230;
    </string>
    <string name="on_demand_updating_title">Resource Cache Initializer</string>
    <string name="on_demand_updating_text">%s\'s cache is now rebuilding&#8230;</string>
    <string name="background_updating_toast">Substratum is getting a theme ready in the background,
        please wait for this to finish!
    </string>
    <string name="background_needs_invalidating">Oops! A corruption in the cache has occurred.</string>
    <string name="background_needs_invalidating_button">Wipe</string>
    <string name="background_updated_toast">Resource cache has been built!</string>
    <string name="background_updated_toast_cancel">This theme needs to upgrade its resource cache
        before it is functional!
    </string>
    <string name="background_updated_toast_cleaning">Substratum is now clearing up this theme\'s
        resource cache&#8230;</string>
    <string name="failed_to_install_title_notification">Failed to install OMS theme</string>
    <string name="failed_to_install_text_notification">%s failed to install</string>
    <string name="actionbar_theme_count_singular">%s theme</string>
    <string name="actionbar_theme_count_plural">%s themes</string>
    <string name="actionbar_theme_count_none">no themes found</string>
    <string name="actionbar_theme_count_loading">loading&#8230;</string>
    <string name="actionbar_search">Search</string>
    <string name="actionbar_changelog">Theme Changelog</string>
    <string name="settings_icons">Settings Icons</string>
    <string name="systemui_headers">System UI Headers</string>
    <string name="systemui_navigation">System UI Navigation</string>
    <string name="systemui_qs_tiles">System UI QS Tile Icons</string>
    <string name="systemui_statusbar">System UI Status Bar Icons</string>
    <string name="tbo_description">This theme supports Team Black Out\'s Theme Ready Google Apps, if
        you do not have them, you can click Download to be redirected to their XDA thread, or Cancel
        if you already have them!
    </string>
    <string name="two_description">This theme supports Google\'s stock apps, the way they were made!
        If you have Theme Ready Google Apps installed then you do not need to remove them,
        but they are not required for this theme!
    </string>
    <string name="tbo_dialog_proceed">Download</string>
    <string name="dynamic_gapps_dialog" translatable="false">Beans Gapps</string>
    <string name="settings_about_substratum">substratum version</string>
    <string name="settings_about_oms_rro_version">theme platform:</string>
    <string name="settings_about_rro_version_2">RRO2 (Legacy)</string>
    <string name="settings_about_system_version">system platform</string>
    <string name="settings_about_system_content" translatable="false">%NULL$</string>
    <string name="settings_aopt_switcher_title">System Overlay Compiler</string>
    <string name="settings_aapt" translatable="false">Android Asset Packaging Tool (Stable)</string>
    <string name="nougat_style_cards_title">Nougat Style Card Layout</string>
    <string name="nougat_style_cards_subtext">Enable Android Nougat Notification styled theme
        cards.
    </string>
    <string name="menu_clean">Clean installed overlays</string>
    <string name="menu_clean_cache">Clean theme cache</string>
    <string name="menu_disable">Disable installed overlays</string>
    <string name="menu_enable">Enable installed overlays</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_rate">Rate theme</string>
    <string name="menu_soft_reboot">Soft Reboot</string>
    <string name="menu_reboot_device">Reboot Device</string>
    <string name="menu_per_app">FloatUI</string>
    <string name="menu_restart_systemui">Restart SystemUI</string>
    <string name="menu_alphabetize">Change Sorting Mode</string>
    <string name="menu_showcase">Showcase</string>
    <string name="menu_uninstall">Uninstall Theme</string>
    <string name="shortcut_floatui">FloatUI</string>
    <string name="shortcut_floatui_disabled">FloatUI</string>
    <string name="shortcut_rescue">Rescue Me!</string>
    <string name="shortcut_rescue_disabled">Rescue Me!</string>
    <string name="shortcut_store">Theme Showcase</string>
    <string name="shortcut_store_disabled">Theme Showcase</string>
    <string name="settings_title">About</string>
    <string name="settings_title_1">App Options</string>
    <string name="settings_title_2">Overlay List Options</string>
    <string name="settings_title_3">Theming</string>
    <string name="settings_title_clickable">System Configuration</string>
    <string name="purge_cache">Invalidate Theme Cache</string>
    <string name="purge_cache_subtext">This will destroy all stored theme and application cache.</string>
    <string name="restart_systemui">Post-enable SystemUI recreate</string>
    <string name="restart_systemui_subtext">Automatically recreate the SystemUI after enabling/disabling a SystemUI overlay</string>
    <string name="show_theme_template_version">Show advanced theme information</string>
    <string name="show_theme_template_version_description">Show each theme\'s target SDK levels, theme version and plugin version as a tag on each of the theme cards.</string>
    <string name="vibrate_on_compiled">Notify after theme is compiled</string>
    <string name="vibrate_on_compiled_description">When the theme has been compiled, vibrate the device to notify the user that the compilation has completed.</string>
    <string name="hide_app_icon">Show app icon</string>
    <string name="hide_app_icon_not_supported">Change not supported</string>
    <string name="dynamic_actionbar_colors">Dynamic Action Bar Colors</string>
    <string name="dynamic_actionbar_colors_subtext">In the theme information window, Substratum will adapt the collapsible action bar to the hero image\'s dominating color.</string>
    <string name="dynamic_navbar_colors">Dynamic Navigation Bar Colors</string>
    <string name="dynamic_navbar_colors_subtext">In the theme information window, Substratum will adapt the navigation bar to the hero image\'s dominating color.</string>
    <string name="manager_title">Show disabled overlays in the list</string>
    <string name="manager_subtext">In the overlay list window, show all disabled overlays with their enabled counterparts.</string>
    <string name="alternate_drawer_design_title">Secondary Drawer Design</string>
    <string name="alternate_drawer_design_subtext">Uses an alternate navigation drawer design when navigating through the user interface.</string>
    <string name="show_outdated_themes_title">Show all outdated themes</string>
    <string name="show_outdated_themes_content">Disabling this would allow Substratum to utilize
        the brand new algorithm where themes get loaded up much faster than usual. This will only
        work for properly configured 6.0.0+ plugin themes.</string>
    <string name="settings_system_status">system certification</string>
    <string name="settings_system_status_rooted">rooted mode</string>
    <string name="settings_force_english_title">Force English Language</string>
    <string name="settings_force_english_text">This will force the application to use the English language.</string>
    <string name="restore_bootanimation_text">Boot animation</string>
    <string name="restore_bootanimation_summary">This function removes the previously applied boot animation and restores it to the stock boot animation\n</string>
    <string name="restore_bootanimation_button">Restore boot animation</string>
    <string name="nav_home">Theme packs</string>
    <string name="nav_overlay_manager">Overlay list</string>
    <string name="nav_manage">Recovery</string>
    <string name="nav_settings">Settings</string>
</resources>