<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:title="@string/settings_title">

        <Preference
            android:key="about_substratum"
            android:summary="SUBSTRATUM_VERSION"
            android:title="@string/settings_about_substratum"/>

        <Preference
            android:key="theme_platform"
            android:summary="@string/settings_about_rro_version_2"
            android:title="@string/settings_about_oms_rro_version"/>

        <Preference
            android:key="system_status"
            android:summary="@string/settings_system_status_rooted"
            android:title="@string/settings_system_status"/>

        <Preference
            android:key="system_platform"
            android:summary="@string/settings_about_system_content"
            android:title="@string/settings_about_system_version"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:title="@string/settings_title_clickable">

        <Preference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:key="purge_cache"
            android:summary="@string/purge_cache_subtext"
            android:title="@string/purge_cache"/>

        <Preference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:key="aopt_switcher"
            android:summary="@string/settings_aapt"
            android:title="@string/settings_aopt_switcher_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:title="@string/settings_title_1">

        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:key="force_english_locale"
            android:summary="@string/settings_force_english_text"
            android:title="@string/settings_force_english_title"/>

        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:key="vibrate_on_compiled"
            android:summary="@string/vibrate_on_compiled_description"
            android:title="@string/vibrate_on_compiled"/>

        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:key="show_template_version"
            android:summary="@string/show_theme_template_version_description"
            android:title="@string/show_theme_template_version"/>

        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:key="show_outdated_themes"
            android:summary="@string/show_outdated_themes_content"
            android:title="@string/show_outdated_themes_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:title="@string/settings_title_3">

        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:key="dynamic_actionbar"
            android:summary="@string/dynamic_actionbar_colors_subtext"
            android:title="@string/dynamic_actionbar_colors"/>

        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:key="dynamic_navbar"
            android:summary="@string/dynamic_navbar_colors_subtext"
            android:title="@string/dynamic_navbar_colors"/>

        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:key="nougat_style_cards"
            android:summary="@string/nougat_style_cards_subtext"
            android:title="@string/nougat_style_cards_title"/>

        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:key="alternate_drawer_design"
            android:summary="@string/alternate_drawer_design_subtext"
            android:title="@string/alternate_drawer_design_title"/>

    </PreferenceCategory>
</PreferenceScreen>