<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/app_shortcut_showcase"
        android:shortcutDisabledMessage="@string/shortcut_store_disabled"
        android:shortcutId="store"
        android:shortcutLongLabel="@string/shortcut_store"
        android:shortcutShortLabel="@string/shortcut_store">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="projekt.substratum.ShowcaseActivity"
            android:targetPackage="projekt.substratum"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/app_shortcut_rescue"
        android:shortcutDisabledMessage="@string/shortcut_rescue_disabled"
        android:shortcutId="rescue"
        android:shortcutLongLabel="@string/shortcut_rescue"
        android:shortcutShortLabel="@string/shortcut_rescue">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="projekt.substratum.RescueActivity"
            android:targetPackage="projekt.substratum"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/app_shortcut_floatui"
        android:shortcutDisabledMessage="@string/shortcut_floatui_disabled"
        android:shortcutId="floatui"
        android:shortcutLongLabel="@string/shortcut_floatui"
        android:shortcutShortLabel="@string/shortcut_floatui">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="projekt.substratum.FloatUILaunchActivity"
            android:targetPackage="projekt.substratum"/>
    </shortcut>
</shortcuts>