<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016-2017 Projekt Substratum
  ~ This file is part of Substratum.
  ~
  ~ Substratum is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Substratum is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Substratum.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/toolbar_search"
        android:orderInCategory="1"
        android:title="@string/actionbar_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/rescue"
        android:icon="@drawable/toolbar_rescue"
        android:menuCategory="secondary"
        android:orderInCategory="2"
        android:title="@string/nav_recovery"
        app:showAsAction="always" />
    <item
        android:id="@+id/showcase"
        android:icon="@drawable/toolbar_showcase"
        android:menuCategory="secondary"
        android:orderInCategory="3"
        android:title="@string/menu_showcase"
        app:showAsAction="always" />
    <item
        android:id="@+id/per_app"
        android:icon="@drawable/toolbar_per_app"
        android:menuCategory="secondary"
        android:orderInCategory="4"
        android:title="@string/menu_per_app"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/reboot_device"
        android:title="@string/menu_reboot_device" />
    <item
        android:id="@+id/soft_reboot"
        android:title="@string/menu_soft_reboot" />
</menu>