<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/actionbar_search"
        android:title="@string/actionbar_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/toolbar_showcase"
        android:menuCategory="secondary"
        android:orderInCategory="1"
        android:title="@string/menu_showcase"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/restart_systemui"
        android:icon="@drawable/toolbar_refresh"
        android:menuCategory="secondary"
        android:orderInCategory="2"
        android:title="@string/menu_restart_systemui"
        app:showAsAction="ifRoom"/>
</menu>