<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016-2017 Projekt Substratum
  ~ This file is part of Substratum.
  ~
  ~ Substratum is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Substratum is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Substratum.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/toolbar_search"
        android:orderInCategory="1"
        android:title="@string/actionbar_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/sort_by_state"
        android:icon="@drawable/toolbar_manager_all"
        android:orderInCategory="2"
        android:title="@string/menu_state_prefix"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/alphabetize"
        android:icon="@drawable/toolbar_alphabetize"
        android:orderInCategory="3"
        android:title="@string/menu_alphabetize"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/restart_systemui"
        android:icon="@drawable/toolbar_refresh"
        android:menuCategory="secondary"
        android:orderInCategory="4"
        android:title="@string/menu_restart_systemui"
        app:showAsAction="ifRoom" />
</menu>