<!--
  ~ Copyright (c) 2016-2017 Projekt Substratum
  ~ This file is part of Substratum.
  ~
  ~ Substratum is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Substratum is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Substratum.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        card_view:cardBackgroundColor="@color/main_screen_card_background"
        card_view:cardCornerRadius="@dimen/main_screen_card_corner_radius"
        card_view:cardElevation="@dimen/main_screen_card_corner_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bootanimation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/restore_bootanimation_text"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bootanimation_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/bootanimation_text"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/restore_bootanimation_summary" />

            <Button
                android:id="@+id/bootanimationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bootanimation_summary"
                android:layout_marginTop="5dp"
                android:background="@color/backup_button"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/restore_bootanimation_button"
                android:textColor="@color/backup_button_text_color" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>